--- a/index.html
+++ b/index.html
@@ -10,127 +10,110 @@
 <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header>
+    <header>    <!--Header--> 
         <nav>
-            <a class="logo" href="./index.html">Web<span class="studio">Studio</span>
-            </a>
+            <a class="logo" href="./index.html">WEB<span>STUDIO</span></a>
             <ul>
-                <li>
-                    <a class="headline" href="./index.html">Studio</a>
-                </li>
-                <li>
-                    <a class="headline" href="">Portfolio</a>
-                </li>
-                <li>
-                    <a class="headline" href="">Contacts</a>
-                </li>
+                <li>Studio</li>
+                <li>Portfolio</li>
+                <li>Contacts</li>
             </ul>
         </nav>
-        <address class="contact">
+        <address>
             <ul>
-                <li><a class="info" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a class="info" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+                <li><a href="mailto: info@devstudio.com">info@devstudio.com</a></li>
+                <li><a href="tel: 110001111111">+11 (000) 111-11-11</a></li>
             </ul>
         </address>
     </header>
-
     <main>
-        <section class="main_page">
-            <h1 class="caption">Effective Solutions for Your Business</h1>
-            <button class="knob">Order Service</button>
-        </section>
-        <section>
-            <h2  class="heading">Title</h2>
+        <section>   <!--Section HERO-->
+            <h1>Effective Solutions for Your Business</h1>
+            <button type="button">Order Service</button>
+        </section> 
+        <section>   <!--Section Studio Descriptions-->
+            <h2 class="hidden">Tittle</h2>
             <ul>
                 <li>
-                    <h3 class="titles">Strategy</h3>
-                    <p class="description">
-                        Our goal is to identify the business problem to walk away with the perfect and creative solution.
-                    </p>
+                    <h3>Strategy</h3>
+                    <p>Our goal is to identify the business problem to walk away with the perfect and creative solution. </p>
                 </li>
                 <li>
-                    <h3 class="titles">Punctuality</h3>
-                    <p class="description">
-                        Bring the key message to the brand's audience for the best price within the shortest possible time.
-                    </p>
+                    <h3>Punctuality</h3>
+                    <p>Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
                 </li>
                 <li>
-                    <h3 class="titles">Diligence</h3>
-                    <p class="description">
-                        Research and confirm brands that present the strongest digital growth opportunities and minimize risk.
-                    </p>
+                    <h3>Diligence</h3>
+                    <p>Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
                 </li>
                 <li>
-                    <h3 class="titles">Technologies</h3>
-                    <p class="description">
-                        Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.
-                    </p>
+                    <h3>Technologies</h3>
+                    <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
                 </li>
             </ul>
         </section>
-        <section class="section_team">
-            <h2 class="heading">Our Team</h2>
-                    <ul>
-                        <li class="team_list">
-                            <img src="./images/Mark.jpg" alt="Mark Guerrero">
-                            <h3 class="titles">Mark Guerrero</h3>
-                            <p class="description">Product Designer</p>
-                        </li>
-                        <li class="team_list">
-                            <img src="./images/Tom.jpg" alt="Tom Ford">
-                            <h3 class="titles">Tom Ford</h3>
-                            <p class="description">Frontend Developer</p>
-                        </li>
-                        <li class="team_list">
-                            <img src="./images/Camilla.jpg" alt="Camila Garcia">
-                            <h3 class="titles">Camila Garcia</h3>
-                            <p class="description">Marketing</p>
-                        </li>
-                        <li class="team_list">
-                            <img src="./images/Daniel.jpg" alt="Daniel Wilson">
-                            <h3 class="titles">Daniel Wilson</h3>
-                            <p class="description">UI Designer</p>
-                        </li>
-                    </ul>   
-        </section>
-        <section>
-            <h2 class="heading">Our Portfolio</h2>
+        <section>   <!--Section "Our team"-->
+            <h2>Our Team</h2>
             <ul>
-                <li><img src="./images/APP.jpg" alt="App" width="360">
-                    <h3 class="img_form">Banking App</h3>
-                    <p class="script">App</p>
+                <li><img src="./images/mark.jpg" alt="product-designer" width="260">
+                    <h3>Mark Guerrero</h3>
+                    <p>Product Designer</p>
                 </li>
-                <li><img src="./images/Cashless.jpg" alt="Cashless" width="360">
-                    <h3 class="img_form">Cashless Payment</h3>
-                    <p class="script">Marketing</p>
+                <li><img src="./images/tom.jpg" alt="frontend-developer" width="260">
+                    <h3>Tom Ford</h3>
+                    <p>Frontend Developer</p>
+                </li>
+                <li><img src="./images/camilla.jpg" alt="marketing" width="260">
+                    <h3>Camila Garcia</h3>
+                    <p>Marketing</p>
+                </li>
+                <li><img src="./images/daniel.jpg" alt="ui-designer" width="260">
+                    <h3>Daniel Wilson</h3>
+                    <p>UI Designer</p>
+                </li>
+            </ul>
+        </section>
+        <section>   <!--Section Portfolio-->
+            <h2>Our Portfolio</h2>
+            <ul>
+                <li>
+                    <img src="./images/app.jpg" alt="Banking App" width="360">
+                    <h3>Banking App</h3>
+                    <p>App</p>
                 </li>
                 <li>
-                    <img src="./images/Meditation.jpg" alt="Meditation" width="360">
-                    <h3 class="img_form">Meditation App</h3>
-                    <p class="script">App</p>
+                    <img src="./images/cashless.jpg" alt="Cashless Payment" width="360">
+                    <h3>Banking App</h3>
+                    <h3>Cashless Payment</h3>
+                    <p>Marketing</p>
                 </li>
                 <li>
-                    <img src="./images/Taxi.jpg" alt="Taxi" width="360">
-                    <h3 class="img_form">Taxi Service</h3>
-                    <p class="script">Marketing</p>
+                    <img src="./images/meditation.jpg" alt="Meditation App" width="360">
+                    <h3>Banking App</h3>
+                    <h3>Meditation App</h3>
+                    <p>App</p>
                 </li>
                 <li>
-                    <img src="./images/Screen.jpg" alt="Screen" width="360">
-                    <h3 class="img_form">Screen Illustrations</h3>
-                    <p class="script">Design</p>
+                    <img src="./images/taxi.jpg" alt="Taxi Service" width="360">
+                    <h3>Taxi Service</h3>
+                    <p>Marketing</p>
                 </li>
                 <li>
-                    <img src="./images/Courses.jpg" alt="Courses" width="360">
-                    <h3 class="img_form">Online Courses</h3>
-                    <p class="script">Marketing</p>
+                    <img src="./images/screen.jpg" alt="Screen Illustrations" width="360">
+                    <h3>Screen Illustrations</h3>
+                    <p>Design</p>
+                </li>
+                <li>
+                    <img src="./images/courses.jpg" alt="Online Courses" width="360">
+                    <h3>Online Courses</h3>
+                    <p>Marketing</p>
                 </li>
             </ul>
         </section>
     </main>
-
-    <footer class="apex">
-        <a class="logo" href="./index.html">Web<span class="logo_end">Studio</span></a>
-        <p class="end">
+    <footer>
+        <a href="./index.html">WEB<span>STUDIO</span></a>
+        <p>
             Increase the flow of customers and sales for your business with digital marketing & growth solutions.
         </p>
     </footer>
