--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css">
     <link rel="stylesheet" href="./css/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -12,17 +13,17 @@
 <body>
     <header>    <!--Header--> 
         <nav>
-            <a class="logo" href="./index.html">WEB<span>STUDIO</span></a>
-            <ul>
+            <a class="logo link" href="./index.html">WEB<span>STUDIO</span></a>
+            <ul class="list">
                 <li>Studio</li>
                 <li>Portfolio</li>
                 <li>Contacts</li>
             </ul>
         </nav>
         <address>
-            <ul>
-                <li><a href="mailto: info@devstudio.com">info@devstudio.com</a></li>
-                <li><a href="tel: 110001111111">+11 (000) 111-11-11</a></li>
+            <ul class="list">
+                <li><a class="link" href="mailto: info@devstudio.com">info@devstudio.com</a></li>
+                <li><a class="link" href="tel: 110001111111">+11 (000) 111-11-11</a></li>
             </ul>
         </address>
     </header>
@@ -33,7 +34,7 @@
         </section> 
         <section>   <!--Section Studio Descriptions-->
             <h2 class="hidden">Tittle</h2>
-            <ul>
+            <ul class="list">
                 <li>
                     <h3>Strategy</h3>
                     <p>Our goal is to identify the business problem to walk away with the perfect and creative solution. </p>
@@ -54,7 +55,7 @@
         </section>
         <section>   <!--Section "Our team"-->
             <h2>Our Team</h2>
-            <ul>
+            <ul class="list">
                 <li><img src="./images/mark.jpg" alt="product-designer" width="260">
                     <h3>Mark Guerrero</h3>
                     <p>Product Designer</p>
@@ -75,7 +76,7 @@
         </section>
         <section>   <!--Section Portfolio-->
             <h2>Our Portfolio</h2>
-            <ul>
+            <ul class="list">
                 <li>
                     <img src="./images/app.jpg" alt="Banking App" width="360">
                     <h3>Banking App</h3>
@@ -112,7 +113,7 @@
         </section>
     </main>
     <footer>
-        <a href="./index.html">WEB<span>STUDIO</span></a>
+        <a class="link" href="./index.html">WEB<span>STUDIO</span></a>
         <p>
             Increase the flow of customers and sales for your business with digital marketing & growth solutions.
         </p>
