--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio</title>
+    <title>Web Studio</title>
     <!-- Modern-normalized -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css">
     <!-- Google Fonts -->
@@ -14,7 +14,9 @@
 <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
-    <header>    <!--Header--> 
+    <div class="container">
+        <!--Header--> 
+        <header>
         <nav>
             <a class="logo" href="./index.html">WEB<span class="logo-span">STUDIO</span></a>
             <ul class="list">
@@ -29,95 +31,101 @@
                 <li><a class="link" href="tel: 110001111111">+11 (000) 111-11-11</a></li>
             </ul>
         </address>
-    </header>
-    <main>
-        <section class="hero">   <!--Section HERO-->
-            <h1 class="title">Effective Solutions for Your Business</h1>
-            <button type="button" class="knob">Order Service</button>
-        </section> 
-        <section>   <!--Section Studio Descriptions-->
-            <h2 class="hidden">Tittle</h2>
-            <ul class="list">
-                <li>
-                    <h3 class="list-title">Strategy</h3>
-                    <p class="list-description">Our goal is to identify the business problem to walk away with the perfect and creative solution. </p>
-                </li>
-                <li>
-                    <h3 class="list-title">Punctuality</h3>
-                    <p class="list-description">Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
-                </li>
-                <li>
-                    <h3 class="list-title">Diligence</h3>
-                    <p class="list-description">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
-                </li>
-                <li>
-                    <h3 class="list-title">Technologies</h3>
-                    <p class="list-description">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
-                </li>
-            </ul>
-        </section>
-        <section class="section-team">   <!--Section "Our team"-->
-            <h2 class="section-tittle">Our Team</h2>
-            <ul class="list">
-                <li class="team"><img src="./images/mark.jpg" alt="product-designer" width="260">
-                    <h3 class="list-title">Mark Guerrero</h3>
-                    <p class="list-description">Product Designer</p>
-                </li>
-                <li class="team"><img src="./images/tom.jpg" alt="frontend-developer" width="260">
-                    <h3 class="list-title">Tom Ford</h3>
-                    <p class="list-description">Frontend Developer</p>
-                </li>
-                <li class="team"><img src="./images/camilla.jpg" alt="marketing" width="260">
-                    <h3 class="list-title">Camila Garcia</h3>
-                    <p class="list-description">Marketing</p>
-                </li>
-                <li class="team"><img src="./images/daniel.jpg" alt="ui-designer" width="260">
-                    <h3 class="list-title">Daniel Wilson</h3>
-                    <p class="list-description">UI Designer</p>
-                </li>
-            </ul>
-        </section>
-        <section>   <!--Section Portfolio-->
-            <h2 class="section-tittle">Our Portfolio</h2>
-            <ul class="list">
-                <li>
-                    <img src="./images/app.jpg" alt="Banking App" width="360">
-                    <h3 class="list-title">Banking App</h3>
-                    <p class="list-description">App</p>
-                </li>
-                <li>
-                    <img src="./images/cashless.jpg" alt="Cashless Payment" width="360">
-                    <h3 class="list-title">Cashless Payment</h3>
-                    <p class="list-description">Marketing</p>
-                </li>
-                <li>
-                    <img src="./images/meditation.jpg" alt="Meditation App" width="360">
-                    <h3 class="list-title">Meditation App</h3>
-                    <p class="list-description">App</p>
-                </li>
-                <li>
-                    <img src="./images/taxi.jpg" alt="Taxi Service" width="360">
-                    <h3 class="list-title">Taxi Service</h3>
-                    <p class="list-description">Marketing</p>
-                </li>
-                <li>
-                    <img src="./images/screen.jpg" alt="Screen Illustrations" width="360">
-                    <h3 class="list-title">Screen Illustrations</h3>
-                    <p class="list-description">Design</p>
-                </li>
-                <li>
-                    <img src="./images/courses.jpg" alt="Online Courses" width="360">
-                    <h3 class="list-title">Online Courses</h3>
-                    <p class="list-description">Marketing</p>
-                </li>
-            </ul>
-        </section>
-    </main>
-    <footer class="page-bottom">
-        <a class="logo" href="./index.html">WEB<span class="page-bottom-span">STUDIO</span></a>
-        <p class="page-bottom-description">
+        </header>
+        <main>
+            <!--Section HERO-->
+            <section class="section hero">
+                <h1 class="title">Effective Solutions for Your Business</h1>
+                <button type="button" class="knob">Order Service</button>
+            </section>
+            <!--Section Studio Descriptions--> 
+            <section class="section">
+                <h2 class="hidden">Tittle</h2>
+                <ul class="list">
+                    <li>
+                        <h3 class="list-title">Strategy</h3>
+                        <p class="list-description">Our goal is to identify the business problem to walk away with the perfect and creative solution. </p>
+                    </li>
+                    <li>
+                        <h3 class="list-title">Punctuality</h3>
+                        <p class="list-description">Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
+                    </li>
+                    <li>
+                        <h3 class="list-title">Diligence</h3>
+                        <p class="list-description">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
+                    </li>
+                    <li>
+                        <h3 class="list-title">Technologies</h3>
+                        <p class="list-description">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
+                    </li>
+                </ul>
+            </section>
+            <!--Section "Our team"-->
+            <section class="section-team section">
+                <h2 class="section-tittle">Our Team</h2>
+                <ul class="list">
+                    <li class="team"><img src="./images/mark.jpg" alt="product-designer" width="260">
+                        <h3 class="list-title">Mark Guerrero</h3>
+                        <p class="list-description">Product Designer</p>
+                    </li>
+                    <li class="team"><img src="./images/tom.jpg" alt="frontend-developer" width="260">
+                        <h3 class="list-title">Tom Ford</h3>
+                        <p class="list-description">Frontend Developer</p>
+                    </li>
+                    <li class="team"><img src="./images/camilla.jpg" alt="marketing" width="260">
+                        <h3 class="list-title">Camila Garcia</h3>
+                        <p class="list-description">Marketing</p>
+                    </li>
+                    <li class="team"><img src="./images/daniel.jpg" alt="ui-designer" width="260">
+                        <h3 class="list-title">Daniel Wilson</h3>
+                        <p class="list-description">UI Designer</p>
+                    </li>
+                </ul>
+            </section>
+            <!--Section Portfolio-->
+            <section class="section">
+                <h2 class="section-tittle">Our Portfolio</h2>
+                <ul class="list">
+                    <li>
+                        <img src="./images/app.jpg" alt="Banking App" width="360">
+                        <h3 class="list-title">Banking App</h3>
+                        <p class="list-description">App</p>
+                    </li>
+                    <li>
+                        <img src="./images/cashless.jpg" alt="Cashless Payment" width="360">
+                        <h3 class="list-title">Cashless Payment</h3>
+                        <p class="list-description">Marketing</p>
+                    </li>
+                    <li>
+                        <img src="./images/meditation.jpg" alt="Meditation App" width="360">
+                        <h3 class="list-title">Meditation App</h3>
+                        <p class="list-description">App</p>
+                    </li>
+                    <li>
+                        <img src="./images/taxi.jpg" alt="Taxi Service" width="360">
+                        <h3 class="list-title">Taxi Service</h3>
+                        <p class="list-description">Marketing</p>
+                    </li>
+                    <li>
+                        <img src="./images/screen.jpg" alt="Screen Illustrations" width="360">
+                        <h3 class="list-title">Screen Illustrations</h3>
+                        <p class="list-description">Design</p>
+                    </li>
+                    <li>
+                        <img src="./images/courses.jpg" alt="Online Courses" width="360">
+                        <h3 class="list-title">Online Courses</h3>
+                        <p class="list-description">Marketing</p>
+                    </li>
+                </ul>
+            </section>
+        </main>
+        <!-- Footer -->
+        <footer class="page-bottom">
+            <a class="logo" href="./index.html">WEB<span class="page-bottom-span">STUDIO</span></a>
+            <p class="page-bottom-description">
             Increase the flow of customers and sales for your business with digital marketing & growth solutions.
-        </p>
-    </footer>
+            </p>
+        </footer>
+    </div>
 </body>
 </html>
