--- a/index.html
+++ b/index.html
@@ -72,25 +72,25 @@
                     <ul class="section-team-list">
                         <li class="team"><img src="./images/mark.jpg" alt="product-designer" width="260">
                             <div class="team-container">
-                                <h3 class="section-team-list-title">Mark Guerrero</h3>
+                                <h3 class="section-team-list-tittle">Mark Guerrero</h3>
                                 <p class="section-team-list-description">Product Designer</p>
                             </div>
                         </li>
                         <li class="team"><img src="./images/tom.jpg" alt="frontend-developer" width="260">
                             <div class="team-container">
-                                <h3 class="section-team-list-title">Tom Ford</h3>
+                                <h3 class="section-team-list-tittle">Tom Ford</h3>
                                 <p class="section-team-list-description">Frontend Developer</p>
                             </div>
                         </li>
                         <li class="team"><img src="./images/camilla.jpg" alt="marketing" width="260">
                             <div class="team-container">
-                                <h3 class="section-team-list-title">Camila Garcia</h3>
+                                <h3 class="section-team-list-tittle">Camila Garcia</h3>
                                 <p class="section-team-list-description">Marketing</p>
                             </div>
                         </li>
                         <li class="team"><img src="./images/daniel.jpg" alt="ui-designer" width="260">
                             <div class="team-container">
-                                <h3 class="section-team-list-title">Daniel Wilson</h3>
+                                <h3 class="section-team-list-tittle">Daniel Wilson</h3>
                                 <p class="section-team-list-description">UI Designer</p>
                             </div>
                         </li>
@@ -112,35 +112,35 @@
                         <li class="section-portfolio-item">
                             <img src="./images/cashless.jpg" alt="Cashless Payment">
                             <div class="section-portfolio-list-container">
-                                <h3 class="section-portfolio-list-title">Cashless Payment</h3>
+                                <h3 class="section-portfolio-list-tittle">Cashless Payment</h3>
                                 <p class="list-description">Marketing</p>
                             </div>
                         </li>
                         <li class="section-portfolio-item">
                             <img src="./images/meditation.jpg" alt="Meditation App">
                             <div class="section-portfolio-list-container">
-                                <h3 class="section-portfolio-list-title">Meditation App</h3>
+                                <h3 class="section-portfolio-list-tittle">Meditation App</h3>
                                 <p class="list-description">App</p>
                             </div>
                         </li>
                         <li class="section-portfolio-item">
                             <img src="./images/taxi.jpg" alt="Taxi Service">
                             <div class="section-portfolio-list-container">
-                                <h3 class="section-portfolio-list-title">Taxi Service</h3>
+                                <h3 class="section-portfolio-list-tittle">Taxi Service</h3>
                                 <p class="list-description">Marketing</p>
                             </div>
                         </li>
                         <li class="section-portfolio-item">
                             <img src="./images/screen.jpg" alt="Screen Illustrations">
                             <div class="section-portfolio-list-container">
-                                <h3 class="section-portfolio-list-title">Screen Illustrations</h3>
+                                <h3 class="section-portfolio-list-tittle">Screen Illustrations</h3>
                                 <p class="list-description">Design</p>
                             </div>
                         </li>
                         <li class="section-portfolio-item">
                             <img src="./images/courses.jpg" alt="Online Courses">
                             <div class="section-portfolio-list-container">
-                                <h3 class="section-portfolio-list-title">Online Courses</h3>
+                                <h3 class="section-portfolio-list-tittle">Online Courses</h3>
                                 <p class="list-description">Marketing</p>
                             </div>
                         </li>
