--- a/index.html
+++ b/index.html
@@ -70,25 +70,25 @@
                 <div class="container">
                     <h2 class="section-team-tittle">Our Team</h2>
                     <ul class="section-team-list">
-                        <li class="team"><img src="./images/mark.jpg" alt="product-designer" width="260">
+                        <li class="team"><img src="./images/mark.jpg" alt="product-designer">
                             <div class="team-container">
                                 <h3 class="section-team-list-tittle">Mark Guerrero</h3>
                                 <p class="section-team-list-description">Product Designer</p>
                             </div>
                         </li>
-                        <li class="team"><img src="./images/tom.jpg" alt="frontend-developer" width="260">
+                        <li class="team"><img src="./images/tom.jpg" alt="frontend-developer">
                             <div class="team-container">
                                 <h3 class="section-team-list-tittle">Tom Ford</h3>
                                 <p class="section-team-list-description">Frontend Developer</p>
                             </div>
                         </li>
-                        <li class="team"><img src="./images/camilla.jpg" alt="marketing" width="260">
+                        <li class="team"><img src="./images/camilla.jpg" alt="marketing">
                             <div class="team-container">
                                 <h3 class="section-team-list-tittle">Camila Garcia</h3>
                                 <p class="section-team-list-description">Marketing</p>
                             </div>
                         </li>
-                        <li class="team"><img src="./images/daniel.jpg" alt="ui-designer" width="260">
+                        <li class="team"><img src="./images/daniel.jpg" alt="ui-designer">
                             <div class="team-container">
                                 <h3 class="section-team-list-tittle">Daniel Wilson</h3>
                                 <p class="section-team-list-description">UI Designer</p>
@@ -105,7 +105,7 @@
                         <li class="section-portfolio-item">
                             <img src="./images/app.jpg" alt="Banking App">
                             <div class="section-portfolio-list-container">
-                                <h3 class="section-portfolio-list-title">Banking App</h3>
+                                <h3 class="section-portfolio-list-tittle">Banking App</h3>
                                 <p class="list-description">App</p>
                             </div>
                         </li>
