--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
         <!--Header--> 
         <header class="page-header">
-            <div class="container-header">
+            <div class="container-header container">
                 <nav class="navigation">
                     <a class="logo" href="./index.html">WEB<span class="logo-span">STUDIO</span></a>
                     <ul class="menu">
@@ -44,7 +44,7 @@
             <!--Section-2 Studio Descriptions--> 
             <section class="section-info">
                 <div class="container">
-                    <h2 class="hidden">Tittle</h2>
+                    <h2 class="visually-hidden">Tittle</h2>
                     <ul class="section-info-list">
                         <li class="section-info-list-item">
                             <h3 class="list-title">Strategy</h3>
